# mdb-agent-builder

./: .env.example  DESIGN.md  Dockerfile  Makefile  README.md  TODOS.md  index.html  pyproject.toml  startup.sh  verify_installation.sh
.github/workflows/: ci.yml
agent_builder/: __init__.py  app.py  cli.py  wsgi.py  yaml_loader.py
agent_builder/agents/: agent_gen.py  loader.py  long_term_memory.py  multi_agent.py  plan_execute_replan.py  reflection.py
agent_builder/audit/: __init__.py  mongodb_audit.py
agent_builder/core/: __init__.py  interfaces.py  types.py
agent_builder/embeddings/: adapters.py  loader.py
agent_builder/llms/: adapters.py  loader.py
agent_builder/memory/: __init__.py  adapters.py  mongodb_memory.py
agent_builder/security/: __init__.py  guardrails.py  policies.py  tool_node.py
agent_builder/state/: __init__.py  mongodb_state.py
agent_builder/tools/: adapters.py  loader.py  mcp.py  mongodb.py  policy_enforcing_tool.py
agent_builder/utils/: checkpointer.py  logger.py  logging_config.py
config/: agents.yaml
examples/: README.md  governed_enterprise_support.yaml  long_term_memory_assistant.yaml  multi_agent_customer_support.yaml  plan_execute_replan_research.yaml  react_rag_mongodb.yaml  reflection_quality_reviewer.yaml  tool_call_mcp_agent.yaml
examples/mcp_servers/: local_tools.py
examples/prompts/: governed_support_system.txt  long_term_memory_system.txt  plan_execute_system.txt  react_rag_system.txt  reflection_critique.txt  reflection_generate.txt  tool_call_system.txt
tests/: test_agent_fixes.py  test_app_chat.py  test_examples.py  test_google_adapter.py  test_governance.py  test_grove_adapter.py  test_logging_config.py  test_multi_agent.py  test_support_matrix.py  test_yaml_config.py
